Use `presto` profile in basic tutorial.

--- a/notebooks/1-basic-tutorial.ipynb
+++ b/notebooks/1-basic-tutorial.ipynb
@@ -59,21 +59,7 @@
     "\n",
     "%load_ext aiida\n",
     "\n",
-    "profile = load_profile(\n",
-    "    SqliteTempBackend.create_profile(\n",
-    "        'myprofile',\n",
-    "        options={\n",
-    "            'warnings.development_version': False,\n",
-    "            'runner.poll.interval': 1\n",
-    "        },\n",
-    "        debug=False\n",
-    "    ),\n",
-    "    allow_switch=True\n",
-    ")\n",
-    "config = get_config()\n",
-    "config.add_profile(profile)\n",
-    "config.set_default_profile(profile.name)\n",
-    "profile"
+    "profile = load_profile('presto')"
    ]
   },
   {
